<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fitmix</string>
	<string name="image_description">image</string>
    <string name="try_out">Or try out now!</string>
    <string name="login">Login</string>
    <string name="registe">Registe</string>
    <string name="logo">logo</string>
    <string name="qq">QQ</string>
    <string name="weibo">Weibo</string>
    <string name="wechat">WeChat</string>
    <string name="insert_sd_card">Insert SD Card,Please</string>
    <string name="take_photo_error">Take Photo Error</string>
    <string name="email_login_login">Login</string>
    <string name="email_login_forgot_password">Forgot password</string>
    <string name="email_title">The login information for fitmix</string>
    <string name="email_username_tip">Your username is:</string>
    <string name="email_password_tip">Your password is:</string>
    <string name="email_registe">Registe</string>
    <string name="email_registe_next">Next</string>
    <string name="rsp_error_user_exist">The username has exist</string>
    <string name="rsp_error_password_length_error">The password length too short</string>
    <string name="rsp_username_length_error">The username length too short</string>
    <string name="rsp_error_email_error">The email format is invalide</string>
    <string name="rsp_error_login_error">uncorrect username or password</string>
    <string name="rsp_error_email_address">uncorrect email address</string>
    <string name="personinfo_settings">Person Info Settings</string>
    <string name="personinfo_sex">Sex</string>
    <string name="personinfo_age">Age</string>
    <string name="personinfo_height">Height</string>
    <string name="personinfo_weight">Weight</string>
    <string name="personinfo_unit">Unit</string>
    <string name="personinfo_male">Male</string>
    <string name="personinfo_female">Female</string>
    <string name="personinfo_next">Next</string>
    <string name="personinfo_unit_chinese">kg/cm</string>
    <string name="personinfo_unit_english">lb/in</string>
    <string name="other_setting">Location and Reminder</string>
    <string name="other_setting_tip">Select the following, then we can service you better </string>
    <string name="other_setting_location">Allow location access</string>
    <string name="other_setting_notification">Allow push notification</string>
    <string name="other_setting_trail">Allow remember your trail</string>
    <string name="other_setting_finish">Done</string>
    <string name="music_run">Run</string>
    <string name="music_ride">Ride</string>
    <string name="music_swim">Swim</string>
    <string name="music_more">More&#62;</string>
    <string name="music_mix">Mix</string>
    <string name="music_my">My</string>
    <string name="music_community">Community</string>
    <string name="music_search">Search</string>
    <string name="music_exercise">Exercise</string>
    <string name="music_school">School</string>
    <string name="music_close">close^</string>
    <string name="forgot_password_email_tip">Please input your email for registe</string>
    <string name="forgot_password_submit">Submit</string>
    <string name="forgot_password_tip">Tip</string>
    <string name="forgot_password_message">The password have set to your email</string>
    <string name="forgot_password_ok">OK</string>
    <string name="reg_state_registed">Logined</string>
    <string name="reg_state_unregisted">Unlogoin</string>
    <string name="my_login">Login</string>
    <string name="my_last_record">Last Record</string>
    <string name="record_time">Time</string>
    <string name="record_distance">Distance</string>
    <string name="record_speed">Speed</string>
    <string name="record_bpm">BPM</string>
    <string name="record_history">History</string>
    <string name="history_my_music">Music</string>
    <string name="history_downloading">Downloading</string>
    <string name="history_my_favorite">Favorite</string>
    <string name="album_detail">Album Detail</string>
    <string name="album_download">Download</string>
    <string name="album_downloading">Downloading</string>
    <string name="album_downloaded">Downloaded</string>
    <string name="album_demo">test</string>
    <string name="run_speed">speed m/km</string>
    <string name="run_bpm">BPM</string>
    <string name="run_time">time</string>
    <string name="run_distance">distance km</string>
    <string name="run_last_record">last record</string>

</resources>
