<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fitmix="http://schemas.android.com/apk/res/com.fitmix.sdk"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/rsp_error"
            style="@style/TextErrorStyle" />
    </LinearLayout>

    <ImageView
        android:id="@+id/photo"
        style="@style/ImageViewPhotoStyle"
        android:layout_marginTop="@dimen/person_info_logo_top_margin"
        android:src="@drawable/login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/person_info_bottom_margin"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/person_info_item_bg"
                android:orientation="horizontal" >

                <TextView
                    style="@style/InputTextHintStyle"
                    android:text="@string/personinfo_sex" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="@integer/person_info_space_weight" />

                <com.fitmix.sdk.SwitchButton
                    android:id="@+id/person_info_sex"
                    style="@style/switch_button"
                    fitmix:textOff="@string/personinfo_male"
                    fitmix:textOn="@string/personinfo_female" />
            </LinearLayout>

            <View
                style="@style/ViewSpaceForVertical"
                android:layout_height="@dimen/input_info_item_v_space" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/person_info_item_bg"
                android:orientation="horizontal" >

                <TextView
                    style="@style/InputTextHintStyle"
                    android:text="@string/personinfo_age" />

                <EditText
                    android:id="@+id/person_info_age"
                    style="@style/person_info_edit" />

                <ImageView style="@style/ImagePenStyle" />
            </LinearLayout>

            <View
                style="@style/ViewSpaceForVertical"
                android:layout_height="@dimen/input_info_item_v_space" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/person_info_item_bg"
                android:orientation="horizontal" >

                <TextView
                    style="@style/InputTextHintStyle"
                    android:text="@string/personinfo_height" />

                <EditText
                    android:id="@+id/person_info_height"
                    style="@style/person_info_edit" />

                <ImageView style="@style/ImagePenStyle" />
            </LinearLayout>

            <View
                style="@style/ViewSpaceForVertical"
                android:layout_height="@dimen/input_info_item_v_space" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/person_info_item_bg"
                android:orientation="horizontal" >

                <TextView
                    style="@style/InputTextHintStyle"
                    android:text="@string/personinfo_weight" />

                <EditText
                    android:id="@+id/person_info_weight"
                    style="@style/person_info_edit" />

                <ImageView style="@style/ImagePenStyle" />
            </LinearLayout>

            <View
                style="@style/ViewSpaceForVertical"
                android:layout_height="@dimen/input_info_item_v_space" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/person_info_item_bg"
                android:orientation="horizontal" >

                <TextView
                    style="@style/InputTextHintStyle"
                    android:text="@string/personinfo_unit" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="@integer/person_info_space_weight" />

                <com.fitmix.sdk.SwitchButton
                    android:id="@+id/person_info_unit"
                    style="@style/switch_button"
                    fitmix:textOff="@string/personinfo_unit_chinese"
                    fitmix:textOn="@string/personinfo_unit_english" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/person_info_next_bottom_margin"
            android:orientation="vertical" >

            <Button
                android:id="@+id/person_info_next"
                style="@style/ButtonStepStyle"
                android:text="@string/personinfo_next" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>