<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        style="@style/ImageViewLogoStyle"
        android:layout_marginTop="@dimen/email_login_logo_top_margin"
        android:src="@drawable/login_logo"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/other_setting_topic_bottom_margin"
            android:orientation="vertical" >

            <TextView
                style="@style/TextTopicStyle"
                android:text="@string/other_setting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/other_setting_tip_bottom_margin"
            android:orientation="vertical" >

            <TextView
                style="@style/TextNormalStyle"
                android:text="@string/other_setting_tip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/other_setting_item_bottom_margin"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/other_setting_background" >

                <TextView
                    style="@style/TextOtherSettingStyle"
                    android:text="@string/other_setting_location" />

                <ToggleButton
                    android:id="@+id/other_settings_btn_location"
                    style="@style/ImageSwitchStyle" />
            </FrameLayout>

            <View
                style="@style/ViewSpaceForVertical"
                android:layout_height="@dimen/input_info_item_v_space" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/other_setting_background" >

                <TextView
                    style="@style/TextOtherSettingStyle"
                    android:text="@string/other_setting_notification" />

                <ToggleButton
                    android:id="@+id/other_settings_btn_trail"
                    style="@style/ImageSwitchStyle" />
            </FrameLayout>

            <View
                style="@style/ViewSpaceForVertical"
                android:layout_height="@dimen/input_info_item_v_space" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/other_setting_background" >

                <TextView
                    style="@style/TextOtherSettingStyle"
                    android:text="@string/other_setting_trail" />

                <ToggleButton
                    android:id="@+id/other_settings_btn_notification"
                    style="@style/ImageSwitchStyle" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/other_setting_bottom_margin"
            android:orientation="vertical" >

            <Button
                android:id="@+id/other_setting_done"
                style="@style/ButtonStepStyle"
                android:text="@string/other_setting_finish" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>