<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_history_bg_color"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_history_setting_bar_height"
            android:gravity="right"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description"
                android:layout_marginRight="@dimen/my_history_setting_margin_right"
                android:layout_marginTop="@dimen/my_history_setting_margin_top"
                android:src="@drawable/btn_settings" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_history_photo_bar_height"
            android:background="@color/my_history_bar_color" >

            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/my_history_photo_margin_left"
                android:layout_marginRight="@dimen/my_history_photo_margin_right"
                android:src="@drawable/my_photo" />

            <TextView
                android:id="@+id/login_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/photo"
                android:text="@string/reg_state_unregisted"
                android:textColor="@color/my_history_grey_color"
                android:textSize="@dimen/login_state_text_size" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/my_history_login_margin_right"
                android:background="@drawable/my_login_background"
                android:onClick="myClickHandler"
                android:text="@string/my_login"
                android:textColor="@drawable/btn2_color"
                android:textSize="@dimen/login_btn_text_size" />
        </RelativeLayout>

        <View
            style="@style/ViewSpaceForVertical"
            android:layout_height="@dimen/my_history_v_spacebar_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_history_last_record_height"
            android:background="@color/my_history_bar_color"
            android:gravity="center" >

            <TextView
                style="@style/my_history_normal_text_style"
                android:text="@string/my_last_record" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_history_last_record_height" >

            <TextView
                style="@style/my_history_topic_style"
                android:text="@string/record_time" />

            <View
                style="@style/ViewSpaceForHorizontal"
                android:layout_height="@dimen/my_history_h_spacebar" />

            <TextView
                style="@style/my_history_topic_style"
                android:text="@string/record_distance" />

            <View
                style="@style/ViewSpaceForHorizontal"
                android:layout_height="@dimen/my_history_h_spacebar" />

            <TextView
                style="@style/my_history_topic_style"
                android:text="@string/record_speed" />

            <View
                style="@style/ViewSpaceForHorizontal"
                android:layout_height="@dimen/my_history_h_spacebar" />

            <TextView
                style="@style/my_history_topic_style"
                android:text="@string/record_bpm" />
        </LinearLayout>

        <View
            style="@style/ViewSpaceForVertical"
            android:layout_height="@dimen/my_history_v_spacebar_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_history_last_record_height"
            android:background="@color/my_history_bar_color" >

            <TextView
                android:id="@+id/record_time"
                style="@style/my_history_data_style" />

            <TextView
                android:id="@+id/record_distance"
                style="@style/my_history_data_style" />

            <TextView
                android:id="@+id/record_speed"
                style="@style/my_history_data_style" />

            <TextView
                android:id="@+id/record_bpm"
                style="@style/my_history_data_style" />
        </LinearLayout>

        <View
            style="@style/ViewSpaceForVertical"
            android:layout_height="@dimen/my_history_v_spacebar_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_history_last_record_height"
            android:background="@color/my_history_bar_color" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/my_history_photo_margin_left"
                android:layout_marginRight="@dimen/my_history_photo_margin_right"
                android:contentDescription="@string/image_description"
                android:src="@drawable/my_history" />

            <TextView
                style="@style/my_history_normal_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_history" />
        </LinearLayout>

        <View
            style="@style/ViewSpaceForVertical"
            android:layout_height="@dimen/my_history_v_spacebar_4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_history_music_bar_height"
            android:background="@color/my_history_bar_color"
            android:baselineAligned="false"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/history_music" />

                <TextView
                    style="@style/my_history_text2"
                    android:text="@string/history_my_music" />

                <TextView
                    android:id="@+id/my_music"
                    style="@style/my_history_text3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/history_download" />

                <TextView
                    style="@style/my_history_text2"
                    android:text="@string/history_downloading" />

                <TextView
                    android:id="@+id/my_download"
                    style="@style/my_history_text3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/history_favorite" />

                <TextView
                    style="@style/my_history_text2"
                    android:text="@string/history_my_favorite" />

                <TextView
                    android:id="@+id/my_favorite"
                    style="@style/my_history_text3" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.fitmix.sdk.MusicBottombar
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >
    </com.fitmix.sdk.MusicBottombar>

</FrameLayout>