<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/login_logo_top_margin"
        android:contentDescription=""
        android:src="@drawable/login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_registe_bottom_margin"
            android:orientation="horizontal" >


            <Button
                android:id="@+id/registe"
                android:onClick="myClickHandler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_registe_bg"                
                android:text="@string/registe"
                android:textSize="@dimen/login_btn_textsize"
                android:textColor="@drawable/btn2_color" />

            <View
                android:layout_width="@dimen/login_btn_item_space"
                android:layout_height="1dp" />
                

            <Button
                android:id="@+id/login"
                android:onClick="myClickHandler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_login_bg"
                android:text="@string/login"
                android:textSize="@dimen/login_btn_textsize"
                android:textColor="@drawable/btn_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_3p_bottom_margin"
            android:orientation="horizontal" >


            <ImageView
                android:id="@+id/qq"
                android:onClick="myClickHandler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/btn_qq" />

            <View
                android:layout_width="@dimen/login_3p_item_space"
                android:layout_height="1dp" />

            <ImageView
                android:id="@+id/weibo"
                android:onClick="myClickHandler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/btn_weibo" />

            <View
                android:layout_width="@dimen/login_3p_item_space"
                android:layout_height="1dp" />

            <ImageView
                android:id="@+id/wechat"
                android:onClick="myClickHandler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/btn_wechat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_tryout_bottom_margin"
            android:orientation="vertical" >

            <Button
                android:id="@+id/try_out"
                android:onClick="myClickHandler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/try_out"
                android:textColor="@drawable/btn2_color"
                android:textSize="@dimen/login_tryout_textsize" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
